CMAKE_MINIMUM_REQUIRED (VERSION 2.8)


FIND_LIBRARY(LIBS NAMES json-cpp PATHS "../../deps/")
MESSAGE(STATUS "Library path JSON_LIBMT_LIB is " ${LIBS})

INCLUDE_DIRECTORIES(../../include)
INCLUDE_DIRECTORIES(.)

ADD_EXECUTABLE(bolt ./SplitSentenceTest.cpp ../Storm.cpp)

TARGET_LINK_LIBRARIES(bolt ${LIBS})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../)
